@@ -1,3 +1,3 @@
 docdir = $(datadir)/doc/@PACKAGE@
-doc_DATA = xpak.txt
-EXTRA_DIST = xpak.txt
+doc_DATA = xpak.txt xpak.html
+EXTRA_DIST = xpak.txt xpak.html
